buildscript {
    repositories {
        mavenCentral()
    }
}

plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '0.4.8'
    id 'org.jetbrains.kotlin.jvm' version '1.3.21'
}

group 'com.lauvinson.source.open'
version '0.0.5'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}


dependencies {
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
    // https://mvnrepository.com/artifact/org.jetbrains.kotlin/kotlin-stdlib
    compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: '1.3.21'
    // https://mvnrepository.com/artifact/org.jetbrains.kotlin/kotlin-stdlib
    compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: '1.3.21'
    compile group: 'commons-httpclient', name: 'commons-httpclient', version: '3.1'
    testCompile group: 'junit', name: 'junit', version: '4.12'
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    version '2020.1'
    plugins 'coverage' //Bundled plugin dependencies
    pluginName 'Interactive Assistant'
    plugins 'terminal'
}
patchPluginXml {
    changeNotes """
      <h3>v0.0.5</h3>
      <ul>
        <li>supported exe and api</li>
      </ul>
      <h3>v0.0.3</h3>
      <ul>
        <li>supported higher expansion capabilities</li>
      </ul>
      <h3>v0.0.2</h3>
      <ul>
        <li>supported Intellij full line products</li>
        <li>Develop with Kotlin</li>
      </ul>
      <h3>v0.0.1</h3>
      <ul>
        <li>Release</li>
      </ul>
      """
}

tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}

compileKotlin {
    kotlinOptions.jvmTarget = "1.8"
}
compileTestKotlin {
    kotlinOptions.jvmTarget = "1.8"
}